--- a/src/main/sass/_variables.scss
+++ b/src/main/sass/_variables.scss
@@ -32,8 +32,8 @@ $code-weight: 400;
 $code-padding: 0.25em;
 $code-size: 0.75em;
 $pre-font-size: 0.8em;
-$pre-padding: 1em 1.25em;
 $pre-code-font-size: 0.8em;
+$pre-padding: 0.75em 1em;
 
 $black-bis: rgb(18, 18, 18);
 
